--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -15,12 +15,132 @@ body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+a {
+    color: #333333;
+    text-decoration: none;
+}
+
+.single-product {
+    position: relative;
+    height: 200px;
+    margin-bottom: 20px;
+    background-color: #f8f8f8;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 2px #dddddd;
+}
+
+.figure {
+    position: relative;
+    margin: 0;
+    padding: 1px;
+    width: 100%;
+    height: 200px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.figure {
+    margin: 1em 40px;
+}
+
+.rating {
+    margin: 1px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 30;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.rating p {
+    padding: 0 3px;
+    margin: 0;
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    color: #333333;
+    text-transform: uppercase;
+    text-align: center; 
+}
+
+.single-product figure figcaption {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgba(253, 198, 0, 0.4);
+}
+
+.single-product figure figcaption a {
+    color: #333333;
+    text-decoration: none;
+    position: relative;
+    padding: 6px 10px 6px 30px;
+    border: 1px solid #333333;
+    border-radius: 3px;
+    font-weight: bold;
+  
+}
+
+.single-product figure figcaption a:focus {
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+    text-decoration: none;
+}
+.single-product figure figcaption a:focus, a:hover {
+    color: #23527c;
+    text-decoration: none;
+}
+
+.single-product figure figcaption a .fa {
+  position: absolute;
+  left: -5px;
+  top: 0;
+  height: 28px;
+  padding: 8px;
+  font-weight: bold;
+  border-right: 1px solid #333333;
+}
+.single-product figure figcaption a:hover {
+  background: #333333;
+  color: #fdc600;
+}
+.single-product figure figcaption a:hover .fa {
+  border-color: #fdc600;
+}
+.single-product figure figcaption .view {
+  position: relative;
+  top: 70px;
+}
+.single-product figure figcaption .read-more {
+  position: relative;
+  top: 90px;
+}
+.single-product figure figcaption .read-more .fa {
+  padding: 8px 11px;
+}
+.single-product:hover figure figcaption {
+  display: block;
+}
+
+.single-product h5, .single-product h6 {
+    margin: 0;
+    padding: 5px 4px 0;
+    padding-top: 3px;
+}
+
 .img-portfolio {
     margin-bottom: 30px;
+    width: 100px;
 }
 
 .img-hover:hover {
     opacity: 0.8;
+    
 }
 
 /* Home Page Carousel */
@@ -35,8 +155,8 @@ page-heading {
     position: relative;
     margin-bottom: 30px;
     padding: 30px 15px;
-        padding-top: 30px;
-        padding-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
     color: rgba(255,255,255,0.5);
     background-color: #48467e;
