--- a/frontend/web/css/carousel.css
+++ b/frontend/web/css/carousel.css
@@ -1,117 +1,42 @@
-.carousel-showmanymoveone .carousel-control {
-   width: 4%;
-   background-image: none;
+.slick-prev
+{
+    left: 20px;
+    z-index: 1;
+}
+[dir='rtl'] .slick-prev
+{
+    right: 20px;
+    left: auto;
+}
+.slick-prev:before
+{
+    content: '←';
+}
+[dir='rtl'] .slick-prev:before
+{
+    content: '→';
 }
 
-.carousel-showmanymoveone .carousel-control.left {
-   margin-left: 0;
+.slick-next
+{
+    right: 20px;
+    z-index: 1;
 }
-
-.carousel-showmanymoveone .carousel-control.right {
-   margin-right: 0;
+[dir='rtl'] .slick-next
+{
+    right: auto;
+    left: 20px;
 }
-
-.carousel-showmanymoveone .cloneditem-1,
-.carousel-showmanymoveone .cloneditem-2,
-.carousel-showmanymoveone .cloneditem-3 {
-   display: none;
+.slick-next:before
+{
+    content: '→';
 }
-
-.carousel .item .col-xs-12 {
-   padding: 0;
+[dir='rtl'] .slick-next:before
+{
+    content: '←';
 }
-
-
-/* Medium Devices, Desktops */
-
-@media only screen and (max-width: 992px) {
-   .carousel .item .col-xs-12:nth-last-child(-n+2) {
-      display: none;
-   }
+.slick-initialized .slick-slide
+{
+    display: block;
+    margin-left: 3px;
 }
-
-@media all and (min-width: 768px) {
-   .carousel-showmanymoveone .carousel-inner > .active.left,
-   .carousel-showmanymoveone .carousel-inner > .prev {
-      left: -50%;
-   }
-   .carousel-showmanymoveone .carousel-inner > .active.right,
-   .carousel-showmanymoveone .carousel-inner > .next {
-      left: 50%;
-   }
-   .carousel-showmanymoveone .carousel-inner > .left,
-   .carousel-showmanymoveone .carousel-inner > .prev.right,
-   .carousel-showmanymoveone .carousel-inner > .active {
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner .cloneditem-1 {
-      display: block;
-   }
-}
-
-@media all and (min-width: 768px) and (transform-3d),
-all and (min-width: 768px) and (-webkit-transform-3d) {
-   .carousel-showmanymoveone .carousel-inner > .item.active.right,
-   .carousel-showmanymoveone .carousel-inner > .item.next {
-      -webkit-transform: translate3d(50%, 0, 0);
-      transform: translate3d(50%, 0, 0);
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner > .item.active.left,
-   .carousel-showmanymoveone .carousel-inner > .item.prev {
-      -webkit-transform: translate3d(-50%, 0, 0);
-      transform: translate3d(-50%, 0, 0);
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner > .item.left,
-   .carousel-showmanymoveone .carousel-inner > .item.prev.right,
-   .carousel-showmanymoveone .carousel-inner > .item.active {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-      left: 0;
-   }
-}
-
-@media all and (min-width: 992px) {
-   .carousel-showmanymoveone .carousel-inner > .active.left,
-   .carousel-showmanymoveone .carousel-inner > .prev {
-      left: -16.6%;
-   }
-   .carousel-showmanymoveone .carousel-inner > .active.right,
-   .carousel-showmanymoveone .carousel-inner > .next {
-      left: 16.6%;
-   }
-   .carousel-showmanymoveone .carousel-inner > .left,
-   .carousel-showmanymoveone .carousel-inner > .prev.right,
-   .carousel-showmanymoveone .carousel-inner > .active {
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner .cloneditem-2,
-   .carousel-showmanymoveone .carousel-inner .cloneditem-3 {
-      display: block;
-   }
-}
-
-@media all and (min-width: 992px) and (transform-3d),
-all and (min-width: 992px) and (-webkit-transform-3d) {
-   .carousel-showmanymoveone .carousel-inner > .item.active.right,
-   .carousel-showmanymoveone .carousel-inner > .item.next {
-      -webkit-transform: translate3d(16.6%, 0, 0);
-      transform: translate3d(16.6%, 0, 0);
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner > .item.active.left,
-   .carousel-showmanymoveone .carousel-inner > .item.prev {
-      -webkit-transform: translate3d(-16.6%, 0, 0);
-      transform: translate3d(-16.6%, 0, 0);
-      left: 0;
-   }
-   .carousel-showmanymoveone .carousel-inner > .item.left,
-   .carousel-showmanymoveone .carousel-inner > .item.prev.right,
-   .carousel-showmanymoveone .carousel-inner > .item.active {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-      left: 0;
-   }
-}
-
