--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -55,6 +55,10 @@ a {
     color: #333333;
     text-decoration: none;
 }
+.navbar-inverse {
+    background-color: rgba(34, 34, 34, 0.5);
+    border-color: #080808;
+}
 
 .list-container {
     width: 100%;
@@ -84,10 +88,16 @@ a {
     border: 1px solid rgba(0, 0, 0, 0.1); 
 }
 
-.list-container .scenery-description {
-    width: 167px;
+.list-container .list-shot .imageview4 {
+    width: 100%;
+    height: 100px;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+}
+
+.list-container .description {
+    width: 82%;
     height: 150px;
-    background: #EEE;
+    background: rgba(0, 0, 0, 0.3);
     color: #333;
     text-align: left;
     position: absolute;
@@ -99,24 +109,24 @@ a {
     max-width: 100%;
 }
 
-.list-container .scenery-description .name {
+.list-container .description .name {
     padding: 10px;
     font-weight: bold;
     font-size: 18px;
 }
 
-.list-container .scenery-description .description {
+.list-container .description .description {
     padding: 10px;
     font-size: .8em; 
 }
 
-.list-container .scenery-description .actions {
+.list-container .description .actions {
     position: absolute;
-    bottom: 10px;
-    left: 79px; 
+    bottom: 30px;
+    left: 90px; 
 }
 
-.list-container .scenery-description:hover {
+.list-container .description:hover {
     -webkit-animation: fadeIn 1s;
     /* Safari 4+ */
     -moz-animation: fadeIn 1s;
@@ -178,13 +188,26 @@ page-heading {
     margin-bottom: 30px;
     padding: 30px 15px;
     padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
+    padding-bottom: 120px;
+    text-align: left;
+    font-family: "Open sans", Helvetica, Arial;
+    font-weight: 300;
     color: rgba(255,255,255,0.5);
-    background-color: #48467e;
+    background-color: #187BBD;
     font-size: 1.25rem;
     background-image: url("/images/bg.png");
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-size: auto auto;
+    min-height: 120px;
 }
+.page-heading .heading{
+    font-size: 55px;
+}
+
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
 }
@@ -206,6 +229,17 @@ header.carousel .fill {
     background-position: center;
     background-size: cover;
 }
+
+.widget .panel-body { padding:0px; }
+.widget .list-group { margin-bottom: 0; }
+.widget .panel-title { display:inline }
+.widget .label-info { float: right; padding: 8px; margin-top: -34px}
+.widget li.list-group-item {border-radius: 0;border: 0;border-top: 1px solid #ddd;}
+.widget li.list-group-item:hover { background-color: rgba(86,61,124,.1); }
+.widget .mic-info { color: #666666;font-size: 11px; }
+.widget .action { margin-top:5px; }
+.widget .comment-text { font-size: 12px; }
+.widget .btn-block { border-top-left-radius:0px;border-top-right-radius:0px; }
 
 /* 404 Page Styles */
 
